--- a/book/references.bib
+++ b/book/references.bib
@@ -1,5 +1,5 @@
 @misc{jason_moore,
-  title={Learnn Multibody Dynamics, SymPy},
+  title={Learn Multibody Dynamics, SymPy},
   author={Moore, Jason},
   howpublished={\url{https://moorepants.github.io/learn-multibody-dynamics/sympy.html}},
   year={2023}
